--- a/base/pom.xml
+++ b/base/pom.xml
@@ -21,18 +21,16 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.codelair.raptormp</groupId>
-  <artifactId>raptormp-aggregator</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <parent>
+    <groupId>io.codelair.raptormp</groupId>
+    <artifactId>raptormp-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../parent/pom.xml</relativePath>
+  </parent>
 
-  <name>RaptorMP :: Aggregator</name>
-  <description>Aggregator module for RaptorMP - a fast, light and customizable Eclipse MicroProfile™ middleware.</description>
+  <artifactId>raptormp-base</artifactId>
 
-  <modules>
-    <module>parent</module>
-    <module>base</module>
-    <module>server</module>
-  </modules>
+  <name>RaptorMP :: Base</name>
+  <description>Base module for RaptorMP - deals with bootstrapping and basic configuration of the application server.</description>
 
 </project>
