common module added LogFormatter + SysOut Appender + base configurator added Bootstrap class created in base for testing out the logger in a psvm

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -33,4 +33,12 @@
   <name>RaptorMP :: Base</name>
   <description>Base module for RaptorMP - deals with bootstrapping and basic configuration of the application server.</description>
 
+  <dependencies>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>raptormp-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
+
 </project>
