--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,4 +16,17 @@
   <name>RaptorMP :: Common</name>
   <description>Common utilities module for RaptorMP - contains Exceptions and common utility libraries.</description>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.26</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j18-impl</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+  </dependencies>
 </project>
