--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
   <modules>
     <module>parent</module>
+    <module>common</module>
     <module>base</module>
     <module>server</module>
   </modules>
