--- a/base/pom.xml
+++ b/base/pom.xml
@@ -33,4 +33,27 @@
   <name>RaptorMP :: Base</name>
   <description>Base module for RaptorMP - deals with bootstrapping and basic configuration of the application server.</description>
 
+  <dependencies>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>raptormp-server</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>raptormp-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.smallrye</groupId>
+      <artifactId>smallrye-config</artifactId>
+      <version>1.3.9</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.classgraph</groupId>
+      <artifactId>classgraph</artifactId>
+      <version>4.8.47</version>
+    </dependency>
+  </dependencies>
+
 </project>
