Create a simple hello servlet and generate an index file for it Add some base classes for annotation parsingadd classgraph to raptormp-common instead

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -33,4 +33,12 @@
   <name>RaptorMP :: Common</name>
   <description>Common utilities module for RaptorMP - contains Exceptions, models and common utility libraries.</description>
 
+  <dependencies>
+    <dependency>
+      <groupId>io.github.classgraph</groupId>
+      <artifactId>classgraph</artifactId>
+      <version>4.8.47</version>
+    </dependency>
+  </dependencies>
+
 </project>
