--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -62,6 +62,7 @@
       </plugins>
     </pluginManagement>
 
+<!-- TODO: RE-ENABLE
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -83,6 +84,7 @@
         </dependencies>
       </plugin>
     </plugins>
+-->
   </build>
 
   <repositories>
