--- a/server/pom.xml
+++ b/server/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>javax.annotation-api</artifactId>
       <version>1.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jandex</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
   </dependencies>
 
 </project>
