--- a/examples/servlet-sample-application/pom.xml
+++ b/examples/servlet-sample-application/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>mp.raptor.examples</groupId>
-  <artifactId>Servlet4App</artifactId>
+  <artifactId>servlet-sample-application</artifactId>
   <version>1.0</version>
 
   <name>TODO</name>
@@ -10,8 +10,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>13</maven.compiler.source>
-    <maven.compiler.target>13</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -20,6 +20,11 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <version>4.0.3</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>mp.raptor</groupId>
+      <artifactId>raptormp-base</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -37,6 +42,15 @@
             <goals>
               <goal>shade</goal>
             </goals>
+            <configuration>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <transformers>
+                <transformer implementation=
+                                 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>mp.raptor.base.Runner</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
           </execution>
         </executions>
       </plugin>
