--- a/examples/servlet-sample-application/pom.xml
+++ b/examples/servlet-sample-application/pom.xml
@@ -53,6 +53,18 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>mp.raptor</groupId>
+        <artifactId>raptormp-maven-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>build</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
