--- a/examples/servlet-sample-application/pom.xml
+++ b/examples/servlet-sample-application/pom.xml
@@ -29,6 +29,7 @@
 
   <build>
     <plugins>
+<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -53,6 +54,7 @@
           </execution>
         </executions>
       </plugin>
+-->
       <plugin>
         <groupId>mp.raptor</groupId>
         <artifactId>raptormp-maven-plugin</artifactId>
@@ -61,6 +63,7 @@
           <execution>
             <goals>
               <goal>build</goal>
+              <goal>package</goal>
             </goals>
           </execution>
         </executions>
