--- a/tooling/raptormp-maven-plugin/pom.xml
+++ b/tooling/raptormp-maven-plugin/pom.xml
@@ -15,9 +15,14 @@
 
   <dependencies>
     <dependency>
+      <groupId>mp.raptor</groupId>
+      <artifactId>raptormp-base</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>3.6.3</version>
+      <version>3.6.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
@@ -26,14 +31,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
-      <version>2.2.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <version>3.6.3</version>
+      <groupId>org.twdata.maven</groupId>
+      <artifactId>mojo-executor</artifactId>
+      <version>2.3.1</version>
     </dependency>
     <dependency>
       <groupId>org.jboss</groupId>
